--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     name="viewport"
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
   >
-
+ 
   {% capture seo_tags %}
     {% seo title=false %}
   {% endcapture %}
@@ -90,22 +90,21 @@
   {% endif %}
 
   <!-- JavaScript -->
-  <!-- 百度统计 -->
-  {% if site.baidu_analytics.uid != empty and site.baidu_analytics.uid %}
-    <script>
-      var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?{{ site.baidu_analytics.uid }}";
-        var s = document.getElementsByTagName("script")[0]; 
-        s.parentNode.insertBefore(hm, s);
-      })();
-    </script>
-  {% endif %}
 
   {% unless site.theme_mode %}
     {% include mode-toggle.html %}
   {% endunless %}
 
   {% include metadata-hook.html %}
+  
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?2c9d9de19456147bef966552c029ae7d";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
 </head>
